aanpassingen aan db connectie

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,3 +3,10 @@
     float: left;
     margin-right: 5px;
 }
+
+.besteld {
+  background-color: red !important;
+}
+.bezorgd {
+  background-color: green !important;
+}
